--- a/css/css_altdqcmodel.css
+++ b/css/css_altdqcmodel.css
@@ -1,51 +1,47 @@
-body{
+.body{
 	font-family: "Comic Sans MS";
 }
 
 
-fieldset{
+.fieldset{
 	display:flex;
-	
-	width: 50%;
-	height: 50%;
+	width: 40%;
+	height: 40%;
 	margin: 100px auto;
 	border-radius: 10px;
 	background-color: #dfdddd;
 	box-shadow: 7px 7px 7px #111;
 }
 
-legend{
+.legend{
 	font-size:25px;
 }
 
 .input{
-	margin: 5px 40px 30px;
+	margin: 5px 40px 10px;
 	font-family: "Comic Sans MS";
 	font-size: 15px;
 	border-radius: 10px;
 	background: none;
 }
 
-
-
-.submit{
-	
-	margin-top: 100px;
-	margin-bottom: 10px;
-	margin-left: 33%;
-	
-	
+.input2{
+	margin: 5px 40px 10px;
+	font-family: "Comic Sans MS";
+	font-size: 15px;
+	border-radius: 10px;
+	background: none;
+	border: none;
 }
+
 .submitlayout{
-	margin-top: 100px;
-	margin-bottom: 10px;
-	margin-left: 33%;
 	height: 30px;
 	margin: 3px;
 	border-radius: 8px;
 	color: #7a91c1;
 	font-family: "Comic Sans MS";
 	box-shadow: 5px 5px 5px;
+	float: right;
 }
 
 .submitlayout:hover{
@@ -55,14 +51,16 @@ legend{
 	box-shadow: 5px 5px 5px;
 }
 
-.layout{
-	width: 300px;
-	display: inline;
-	float: right;
-	margin-left: 30px;
-}
-
 .form{
 	margin: 20px;
 	padding: 20px;
+}
+
+.modelo{
+	width: 190px;
+	font-family: "Comic Sans MS";
+	font-size: 15px;
+	border-radius: 10px;
+	background: none;
+	margin: 10px 40px;
 }
