--- a/css/css_caddqcmodel.css
+++ b/css/css_caddqcmodel.css
@@ -1,45 +1,34 @@
-body{
+.body{
 	font-family: "Comic Sans MS";
 }
 
 
-fieldset{
+.fieldset{
 	display:flex;
-	
-	width: 50%;
-	height: 50%;
+	width: 25%;
+	height: 25%;
 	margin: 100px auto;
 	border-radius: 10px;
 	background-color: #dfdddd;
 	box-shadow: 7px 7px 7px #111;
 }
 
-legend{
-	font-size:25px;
-}
-
 .input{
-	margin: 5px 40px 30px;
+	margin: 5px 40px 10px;
 	font-family: "Comic Sans MS";
 	font-size: 15px;
 	border-radius: 10px;
 	background: none;
 }
 
-
-
 .submit{
-	
-	margin-top: 100px;
-	margin-bottom: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	margin-left: 33%;
-	
-	
 }
+
 .submitlayout{
-	margin-top: 100px;
-	margin-bottom: 10px;
-	margin-left: 33%;
+	margin-left: 0%;
 	height: 30px;
 	margin: 3px;
 	border-radius: 8px;
@@ -53,13 +42,6 @@ legend{
 	background-color: #7a91c1;
 	color: white;
 	box-shadow: 5px 5px 5px;
-}
-
-.layout{
-	width: 300px;
-	display: inline;
-	float: right;
-	margin-left: 30px;
 }
 
 .form{
